// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MergeTicketsContainer component should render a closed modal because isOpen==false 1`] = `
<Modal
  isOpen={false}
  onClose={[Function]}
  size="huge"
>
  <ModalHeader
    title="Merge tickets"
  />
  <ModalBody>
    <Connect(SelectTargetTicket)
      customerId={22}
      sourceTicket={
        Immutable.Map {
          "subject": "foo",
          "assignee_user": Immutable.Map {
            "id": 1,
            "name": "John Smith",
          },
          "customer": Immutable.Map {
            "id": 22,
            "name": "Maria Curie",
          },
        }
      }
      updateTargetTicket={[Function]}
    />
  </ModalBody>
</Modal>
`;

exports[`MergeTicketsContainer component should render the build component if there is a selected ticket in the state 1`] = `
<Modal
  isOpen={true}
  onClose={[Function]}
  size="huge"
>
  <ModalHeader
    title="Merge tickets"
  />
  <ModalBody>
    <BuildFinalTicket
      finalTicket={null}
      sourceTicket={
        Immutable.Map {
          "subject": "foo",
          "assignee_user": Immutable.Map {
            "id": 1,
            "name": "John Smith",
          },
          "customer": Immutable.Map {
            "id": 22,
            "name": "Maria Curie",
          },
        }
      }
      targetTicket={
        Immutable.Map {
          "subject": "foo",
          "assignee_user": Immutable.Map {
            "id": 1,
            "name": "John Smith",
          },
          "customer": Immutable.Map {
            "id": 22,
            "name": "Maria Curie",
          },
        }
      }
      updateFinalTicket={[Function]}
    />
  </ModalBody>
  <ModalActionsFooter
    extra={
      <ForwardRef
        color="secondary"
        isDisabled={false}
        onClick={[Function]}
      >
        <ButtonIconLabel
          icon="arrow_back"
        >
          Back
        </ButtonIconLabel>
      </ForwardRef>
    }
  >
    <ForwardRef
      intent="secondary"
      isDisabled={false}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef>
    <ConfirmButton
      confirmationContent="This action is irreversible. Are you sure you want to merge these tickets?"
      isLoading={false}
      onClick={[Function]}
    >
      Merge tickets
    </ConfirmButton>
  </ModalActionsFooter>
</Modal>
`;

exports[`MergeTicketsContainer component should render the selection component if there is no selected ticket in the state 1`] = `
<Modal
  isOpen={true}
  onClose={[Function]}
  size="huge"
>
  <ModalHeader
    title="Merge tickets"
  />
  <ModalBody>
    <Connect(SelectTargetTicket)
      customerId={22}
      sourceTicket={
        Immutable.Map {
          "subject": "foo",
          "assignee_user": Immutable.Map {
            "id": 1,
            "name": "John Smith",
          },
          "customer": Immutable.Map {
            "id": 22,
            "name": "Maria Curie",
          },
        }
      }
      updateTargetTicket={[Function]}
    />
  </ModalBody>
</Modal>
`;
